# whisper-node

./: .gitignore  BUILD_DMG_README.md  CLAUDE.md  LICENSE  Package.swift  README.md  WhisperNode.xcconfig  build-dmg.sh  codeshark-claude.md  commit-message.txt  setup-claude-code-mcp.sh  test_audio_utilities.swift
.github/workflows/: README.md  build-and-release.yml  ci.yml  security.yml
Tests/Integration/: ComponentInteractionTests.swift  IntegrationTestSuite.swift  README.md  WorkflowTests.swift
Tests/Utilities/: PerformanceMeasurement.swift  SystemConfigDetector.swift  TestHarness.swift
Tests/WhisperNodeTests/: AboutTabTests.swift  ApplicationCompatibilityMatrix.swift  ApplicationUtilsTests.swift  AudioCaptureEngineTests.swift  AudioDeviceManagerTests.swift  AudioDiagnosticsTests.swift  AudioPermissionManagerTests.swift  ErrorHandlingManagerTests.swift  GlobalHotkeyManagerTests.swift  HapticManagerTests.swift  IntegrationPerformanceTests.swift  ModelsTabTests.swift  PerformanceTestSuite.swift  (+8 more)
docs/: CODE_SIGNING.md  Progress.md  development-entitlements.md  dmg-quick-start.md  hotkey-transcription-fixes-recommendations.md  local-dmg-analysis.md  privacy-compliance-verification.md  recommended.md  security-audit-report.md  security-implementation-guide.md
scripts/: build-release.sh  build-rust.sh  create-dmg.sh  export-options.plist  generate-icons.sh  notarize-app.sh  run-performance-tests.sh  security-audit.sh  setup-certificates.sh  verify-signing.sh
whisper-rust/: Cargo.toml  build.rs
whisper-rust/.cargo/: config.toml
whisper-rust/src/: lib.rs
(+103 files in other folders)
